--- a/jflex-unicode-maven-plugin/pom.xml
+++ b/jflex-unicode-maven-plugin/pom.xml
@@ -66,5 +66,10 @@
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
     </dependency>
+    <dependency>
+      <groupId>de.jflex</groupId>
+      <artifactId>ucd</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
