--- a/java/jflex/ucd_generator/ucd/BUILD
+++ b/java/jflex/ucd_generator/ucd/BUILD
@@ -1,11 +1,12 @@
 java_library(
     name = "ucd",
     srcs = glob(["*.java"]),
-    deps = [
-        "//third_party/com/google/guava",
-    ],
     visibility = [
         "//java/jflex/ucd_generator:__subpackages__",
         "//javatests/jflex/ucd_generator:__subpackages__",
+    ],
+    deps = [
+        "//java/jflex/ucd",
+        "//third_party/com/google/guava",
     ],
 )
