Extract minimal interface to create a UcdVersion by the mojo

--- a/java/jflex/ucd_generator/BUILD
+++ b/java/jflex/ucd_generator/BUILD
@@ -4,16 +4,19 @@ SRCS_MAIN = ["Main.java"]
 
 java_library(
     name = "ucd_generator",
-    srcs = ["UcdGenerator.java", "UcdGeneratorParams.java"],
+    srcs = [
+        "UcdGenerator.java",
+        "UcdGeneratorParams.java",
+    ],
     deps = [
         "//java/jflex/testing/javac",
-        "//java/jflex/ucd_generator/ucd",
         "//java/jflex/ucd_generator/emitter/unicode_properties",
         "//java/jflex/ucd_generator/emitter/unicode_version",
+        "//java/jflex/ucd_generator/ucd",
         "//java/jflex/velocity",
+        "//third_party/com/google/auto_value",
         "//third_party/com/google/guava",
         "//third_party/org/apache/velocity",
-        "//third_party/com/google/auto_value",
     ],
 )
 
