The -Xep args must be in the same as -Xplugin:ErrorProne
https://github.com/google/error-prone/pull/1115

--- a/pom.xml
+++ b/pom.xml
@@ -455,8 +455,8 @@
               <target>8</target>
               <compilerArgs>
                 <arg>-XDcompilePolicy=simple</arg>
-                <arg>-Xplugin:ErrorProne</arg>
-                <arg>-Xep:FallThrough:WARN</arg>
+                <arg>-Xplugin:ErrorProne
+                     -Xep:FallThrough:WARN</arg>
               </compilerArgs>
               <annotationProcessorPaths>
                 <path>
