Work aroun javadoc-plugin
https://bugs.openjdk.java.net/browse/JDK-8212233

--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,10 @@
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.1.1</version>
+          <configuration>
+            <!-- https://bugs.openjdk.java.net/browse/JDK-8212233 -->
+            <source>8</source>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
