--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
-script:
-- ./compile.sh
-- cd java; java jflex.Main --version; cd ..
+dist: trusty
 
 language: java
 
 jdk:
 - oraclejdk8
+
+script:
+- ./compile.sh
+- cd java; java jflex.Main --version; cd ..
 
 cache:
   directories:
