Replace maven_jar by maven_install from rules_jvm_external
Bazel has deprecated maven_jar

--- a/java/jflex/testing/assertion/BUILD
+++ b/java/jflex/testing/assertion/BUILD
@@ -8,6 +8,6 @@ java_library(
         "ThrowingRunnable.java",
     ],
     deps = [
-        "@jsr305//jar",
+        "//third_party/com/google/code/findbugs:jsr305",
     ],
 )
