Simplify UcdVersion with @AutoValue

--- a/java/jflex/ucd_generator/ucd/BUILD
+++ b/java/jflex/ucd_generator/ucd/BUILD
@@ -3,6 +3,7 @@ java_library(
     srcs = glob(["*.java"]),
     deps = [
         "//third_party/com/google/guava",
+        "//third_party/com/google/auto_value",
     ],
     visibility = [
         "//java/jflex/ucd_generator:__subpackages__",
