--- a/javatests/jflex/ucd_generator/emitter/unicode_version/BUILD
+++ b/javatests/jflex/ucd_generator/emitter/unicode_version/BUILD
@@ -4,6 +4,7 @@ java_test(
     deps = [
         "//java/jflex/testing/diff",
         "//java/jflex/ucd_generator/emitter/unicode_version",
+        "//java/jflex/ucd_generator/scanner:unicode_data",
         "//java/jflex/ucd_generator/ucd",
         "//third_party/com/google/truth",
     ],
