--- a/javatests/jflex/ucd_generator/ucd/BUILD
+++ b/javatests/jflex/ucd_generator/ucd/BUILD
@@ -1,4 +1,13 @@
 java_test(
+    name = "CodepointRangeSetTest",
+    srcs = ["CodepointRangeSetTest.java"],
+    deps = [
+        "//java/jflex/ucd_generator/ucd",
+        "//third_party/com/google/truth",
+    ],
+)
+
+java_test(
     name = "UcdVersionsTest",
     srcs = ["UcdVersionsTest.java"],
     deps = [
