--- a/javatests/jflex/ucd_generator/scanner/BUILD
+++ b/javatests/jflex/ucd_generator/scanner/BUILD
@@ -4,7 +4,7 @@ java_test(
     data = ["//third_party/unicode:ucd_10"],
     deps = [
         "//java/jflex/ucd_generator/scanner:unicode_data",
-        "//java/jflex/ucd_generator/scanner:unicode_data_scanner",
+        "//java/jflex/ucd_generator/scanner:unicode_scanners",
         "//java/jflex/ucd_generator/ucd",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
