Split check java-format & bzl-format

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,7 +22,8 @@ codestyle_task:
   name: Check code style
   container:
     image: openjdk:8-jdk
-  script: scripts/test-java-format.sh
+  check_java_format_script: scripts/test-java-format.sh
+  check_bzl_format_script: scripts/test-bzl-format.sh
 
 steps:
 - restore_cache:
