--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -24,6 +24,10 @@ codestyle_task:
     image: openjdk:8-jdk
   check_java_format_script: scripts/test-java-format.sh
   check_bzl_format_script:  scripts/test-bzl-format.sh
+  buildtools_cache:
+    key: build_tools
+    path:
+    - "buildtools"
 
 steps:
 - restore_cache:
@@ -32,11 +36,7 @@ steps:
   - source-v1-{{ .Branch }}-
   - source-v1-
 - checkout
-- save_cache:
+- git_cache:
   key: source-v1-{{ .Branch }}-{{ .Revision }}
   paths:
   - ".git"
-- save_cache:
-  key: build_tools
-  path:
-  - "buildtools"
