Rename BUILD rule gen_bol_scanner

--- a/javatests/jflex/testcase/bol/BUILD
+++ b/javatests/jflex/testcase/bol/BUILD
@@ -1,7 +1,7 @@
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
 
 jflex(
-    name = "bol_scanner",
+    name = "gen_bol_scanner",
     srcs = ["bol.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["BolScanner.java"],
@@ -12,7 +12,7 @@ java_test(
     srcs = [
         "BolTest.java",
         "State.java",
-        ":bol_scanner",
+        ":gen_bol_scanner",
     ],
     deps = [
         "//third_party/com/google/guava",
