Introduce an AbstractGoldenTest to reduce a bit code duplication.

--- a/java/jflex/testing/testsuite/golden/BUILD
+++ b/java/jflex/testing/testsuite/golden/BUILD
@@ -3,6 +3,7 @@ java_library(
     testonly = True,
     srcs = ["AbstractGoldenTest.java"],
     visibility = ["//visibility:public"],
+    exports = [":model"],
     deps = [
         ":model",
         "//java/jflex/testing/diff",
