--- a/javatests/jflex/testcase/ctorarg/BUILD
+++ b/javatests/jflex/testcase/ctorarg/BUILD
@@ -1,9 +1,7 @@
 # ctorarg
 
-# This build file was generated automatically, but won't be re-generated.
-# Feel free to improve.
-
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
+load("//testsuite:testsuite.bzl", "jflex_testsuite")
 
 jflex(
     name = "gen_ctorarg_scanner",
@@ -24,9 +22,9 @@ java_library(
 )
 
 java_test(
-    name = "CtorargGoldenTest",
+    name = "CtorArgPositiveTest",
     srcs = [
-        "CtorargGoldenTest.java",
+        "CtorArgPositiveTest.java",
     ],
     data = [
     ],
@@ -36,5 +34,18 @@ java_test(
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
+    ],
+)
+
+jflex_testsuite(
+    name = "CtorArgFailureTest",
+    srcs = ["CtorArgFailureTest.java"],
+    data = [
+        "ctorargf.flex",
+    ],
+    deps = [
+        "//java/jflex/util/javac",
+        "//jflex/src/main/java/jflex/exceptions",
+        "//third_party/com/google/guava",
     ],
 )
