--- a/javatests/jflex/testcase/arr_return/BUILD
+++ b/javatests/jflex/testcase/arr_return/BUILD
@@ -3,5 +3,8 @@ load("//testsuite:testsuite.bzl", "jflex_testsuite")
 jflex_testsuite(
     name = "ArrReturnTest",
     srcs = ["ArrReturnTest.java"],
-    data = ["arr.flex"],
+    data = [
+        "arr.flex",
+        "arr-flex.output",
+    ],
 )
