Mark test large_input:LargeInputTest as enormous.
We actually need a lot of RAM to make this test pass.

--- a/javatests/jflex/testcase/large_input/BUILD
+++ b/javatests/jflex/testcase/large_input/BUILD
@@ -2,6 +2,7 @@ load("@jflex_rules//jflex:jflex.bzl", "jflex")
 
 java_test(
     name = "LargeInputTest",
+    size = "enormous",
     srcs = [
         "LargeInputTest.java",
     ],
