--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,6 +6,7 @@ build_task:
   name: Bazel build and test
   container:
     image: l.gcr.io/google/bazel:1.1.0
+    memory: 6G
   bazel_version_script:
   - bazel --bazelrc=.ci.bazelrc info  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  release
   build_script:
