--disk_cache is a build option.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,7 +22,7 @@ build_task:
   test_all_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
   measure_and_aggregate_coverage_script:
-  - bazel --disk_cache=~/_bazel_cache_coverage --bazelrc=.ci.bazelrc coverage  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/... //jflex/...
+  - bazel --bazelrc=.ci.bazelrc coverage --disk_cache=~/_bazel_cache_coverage --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/... //jflex/...
   - name: Send code coverage to Codacy
     only_if: $CIRRUS_BRANCH == $CIRRUS_DEFAULT_BRANCH || $CIRRUS_BRANCH == "cirrus"
     environnement:
