--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -21,8 +21,10 @@ build_task:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/jflex/testcase/...
   test_all_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
-  measure_and_aggregate_coverage_script:
-  - bazel --bazelrc=.ci.bazelrc coverage --disk_cache=null --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/... //jflex/...
+  # Bazel fails to build combined report on Cirrus-ci.
+  # https://github.com/bazelbuild/bazel/issues/6450
+  measure_coverage_script:
+  - bazel --bazelrc=.ci.bazelrc coverage --combined_report=none --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/... //jflex/...
   - name: Send code coverage to Codacy
     only_if: $CIRRUS_BRANCH == $CIRRUS_DEFAULT_BRANCH || $CIRRUS_BRANCH == "cirrus"
     environnement:
