Make `yychar` long (#605)
* Replace `yychar` by long in skeletons (default & nested)

* Update example for long yyChar
  * Also, add some positivity assertion in `example/simple/Yytoken` to give some defensive programming as an example.

* Update manual and READMe

* Update test added in #603 .
   * Improve doc of RepeatContentReader
   * Improve RepeatContentReader
      Don't prepare a large buffer if we read only a few characters.

* Also update testcase/example/simple for long `yychar`.

* Delete testcase/simple which is just redundant with the example.

--- a/javatests/jflex/testcase/large_input/BUILD
+++ b/javatests/jflex/testcase/large_input/BUILD
@@ -19,6 +19,7 @@ java_test(
 java_library(
     name = "large_input_scanner",
     srcs = [
+        "NegativeYyCharException.java",
         "State.java",
         ":gen_large_input_scanner",
     ],
@@ -38,7 +39,9 @@ jflex(
 java_library(
     name = "repeat_content_reader",
     srcs = ["RepeatContentReader.java"],
-    deps = [],
+    deps = [
+        "//third_party/com/google/guava",
+    ],
 )
 
 java_test(
