Create bazel pacakge unicode
Add to relpace Out.dump by System.out.println in IntCharSet

--- a/jflex/src/main/java/jflex/core/BUILD
+++ b/jflex/src/main/java/jflex/core/BUILD
@@ -2,7 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 java_library(
     name = "core",
-    srcs = glob(["**/*.java"]) + [
+    srcs = glob(["*.java"]) + [
         "//jflex:gen_parser",
         "//jflex:gen_scanner",
     ],
@@ -10,6 +10,7 @@ java_library(
         "//cup:cup_runtime",
         "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/chars",
+        "//jflex/src/main/java/jflex/core/unicode",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/io",
         "//jflex/src/main/java/jflex/l10n",
