Rename BUILD rules accordingly.

--- a/javatests/jflex/util/javac/BUILD
+++ b/javatests/jflex/util/javac/BUILD
@@ -1,5 +1,5 @@
 java_test(
-    name = "JavaPackageUtilTest",
+    name = "JavaPackageUtilsTest",
     srcs = ["JavaPackageUtilsTest.java"],
     deps = [
         "//java/jflex/util/javac:package_util",
