Bazelify testcase/ctorarg-f
Manually add a JFlex test case. I'm confused whether we expect a GenerationException, or a warning.

--- a/javatests/jflex/testcase/ctorarg/BUILD
+++ b/javatests/jflex/testcase/ctorarg/BUILD
@@ -41,8 +41,11 @@ java_test(
 )
 
 jflex_testsuite(
-    name = "",
-    srcs = [],
-    data = [],
-    deps = [],
+    name = "CtorNoArgTest",
+    srcs = ["CtorNoArgTest.java"],
+    data = [
+        "ctor-no-arg.flex",
+        "ctor-no-arg.output",
+    ],
+    deps = ["//jflex/src/main/java/jflex/exceptions"],
 )
