Use truth in FileUtilsTest

--- a/jflex/src/test/java/jflex/io/BUILD
+++ b/jflex/src/test/java/jflex/io/BUILD
@@ -1,5 +1,8 @@
 java_test(
     name = "FileUtilsTest",
     srcs = ["FileUtilsTest.java"],
-    deps = ["//jflex/src/main/java/jflex/io"],
+    deps = [
+        "//jflex/src/main/java/jflex/io",
+        "//third_party/com/google/truth",
+    ],
 )
