--- a/jflex/src/main/java/jflex/scanner/BUILD
+++ b/jflex/src/main/java/jflex/scanner/BUILD
@@ -3,4 +3,7 @@ package(default_visibility = ["//jflex:visibility"])
 java_library(
     name = "scanner",
     srcs = glob(["*.java"]),
+    deps = [
+        "//jflex/src/main/java/jflex/l10n",
+    ],
 )
