Fix Error-prone: PrivateConstructorForUtilityClass (#609)
* Make JavaUtils a util class.

* Rename FileUtil to FileUtils

* Rename JavacUtil to JavacUtils

* Rename JavaPackageUtil to JavaPackageUtils

* Rename TestFileUtil to TestFileUtils

* Rename LexSimpleAnalyzer to LexSimpleAnalyzerUtils
and add private constructor

* Add private constructor to Out

* Add private constructor ErrorMessages

* Rename Exec to ExecUtils and add private ctor

* Add private ctor to PomUtils

* Rename Tester to TestsuiteUtils and add private ctor

* Rename BUILD rules accordingly.

* Use truth in FileUtilsTest

* Remove methods min/max and use their java.lang.Math equivalents

--- a/java/jflex/util/javac/BUILD
+++ b/java/jflex/util/javac/BUILD
@@ -4,7 +4,7 @@ java_library(
     name = "javac",
     srcs = [
         "CompilerException.java",
-        "JavacUtil.java",
+        "JavacUtils.java",
     ],
     javacopts = [
         # Only used for testing
@@ -17,7 +17,7 @@ java_library(
 
 java_library(
     name = "package_util",
-    srcs = ["JavaPackageUtil.java"],
+    srcs = ["JavaPackageUtils.java"],
     deps = [
     ],
 )
