--- a/jflex/src/test/java/jflex/io/BUILD
+++ b/jflex/src/test/java/jflex/io/BUILD
@@ -1,5 +1,8 @@
 java_test(
-    name = "FileUtilTest",
-    srcs = ["FileUtilTest.java"],
-    deps = ["//jflex/src/main/java/jflex/io"],
+    name = "FileUtilsTest",
+    srcs = ["FileUtilsTest.java"],
+    deps = [
+        "//jflex/src/main/java/jflex/io",
+        "//third_party/com/google/truth",
+    ],
 )
