Use Jflex with rule --jlex

--- a/javatests/jflex/testcase/caseless_jlex/BUILD
+++ b/javatests/jflex/testcase/caseless_jlex/BUILD
@@ -9,6 +9,7 @@ jflex(
     name = "gen_caseless_scanner",
     srcs = ["caseless.flex"],
     jflex_bin = "//jflex:jflex_bin",
+    jlex = True,
     outputs = ["Caseless.java"],
 )
 
