Add test on sysout (-q)

--- a/javatests/jflex/testcase/caseless_jlex/BUILD
+++ b/javatests/jflex/testcase/caseless_jlex/BUILD
@@ -4,6 +4,7 @@
 # Feel free to improve.
 
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
+load("//testsuite:testsuite.bzl", "jflex_testsuite")
 
 jflex(
     name = "gen_caseless_scanner",
@@ -40,4 +41,14 @@ java_test(
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
     ],
+)
+
+jflex_testsuite(
+    name = "GenerationTest",
+    srcs = ["GenerationTest.java"],
+    data = [
+        "caseless.flex",
+        "caseless.sysout",
+    ],
+    deps = ["//jflex/src/main/java/jflex/exceptions"],
 )
