Remove useless main()

--- a/javatests/jflex/testcase/ccl_esc/BUILD
+++ b/javatests/jflex/testcase/ccl_esc/BUILD
@@ -15,7 +15,6 @@ jflex(
 java_library(
     name = "ccl_scanner",
     srcs = [
-        "Sample.java",
         "Yytoken.java",
         ":gen_ccl_scanner",
     ],
@@ -27,9 +26,7 @@ java_library(
 
 java_test(
     name = "CclGoldenTest",
-    srcs = [
-        "CclGoldenTest.java",
-    ],
+    srcs = ["CclTest.java"],
     data = [
     ],
     deps = [
