Use ScannerFactory in existing tests.

--- a/javatests/jflex/testcase/caseless_jflex/BUILD
+++ b/javatests/jflex/testcase/caseless_jflex/BUILD
@@ -36,6 +36,7 @@ java_test(
         ":caseless_scanner",
         "//java/jflex/testing/diff",
         "//java/jflex/testing/testsuite/golden",
+        "//java/jflex/util/scanner:scanner_factory",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
     ],
