--- a/javatests/jflex/testcase/ccl_esc/BUILD
+++ b/javatests/jflex/testcase/ccl_esc/BUILD
@@ -32,6 +32,7 @@ java_test(
         ":ccl_scanner",
         "//java/jflex/testing/diff",
         "//java/jflex/testing/testsuite/golden",
+        "//java/jflex/util/scanner:scanner_factory",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
     ],
