--- a/javatests/jflex/testcase/ctorarg/BUILD
+++ b/javatests/jflex/testcase/ctorarg/BUILD
@@ -35,6 +35,7 @@ java_test(
         ":ctorarg_scanner",
         "//java/jflex/testing/diff",
         "//java/jflex/testing/testsuite/golden",
+        "//java/jflex/util/scanner:scanner_factory",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
     ],
