--- a/javatests/jflex/testcase/cupsym/BUILD
+++ b/javatests/jflex/testcase/cupsym/BUILD
@@ -38,6 +38,7 @@ java_test(
         ":cupsym_scanner",
         "//java/jflex/testing/diff",
         "//java/jflex/testing/testsuite/golden",
+        "//java/jflex/util/scanner:scanner_factory",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
     ],
