--- a/javatests/jflex/testcase/eol_comment/BUILD
+++ b/javatests/jflex/testcase/eol_comment/BUILD
@@ -26,7 +26,7 @@ java_library(
 java_test(
     name = "EolcommentGoldenTest",
     srcs = [
-        "EolcommentGoldenTest.java",
+        "EolCommentTest.java",
     ],
     data = [
     ],
