Improve migration tool to support migration of several tests in the same testcase directory.

--- a/java/jflex/migration/BUILD
+++ b/java/jflex/migration/BUILD
@@ -13,6 +13,9 @@ java_library(
         "MigrationException.java",
         "Migrator.java",
     ],
+    data = [
+        "BUILD-header.bzl",
+    ],
     deps = [
         ":model",
         ":test_case_parser",
